Issue Model implemented

--- a/IssueTracker/appsettings.json
+++ b/IssueTracker/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "IssueControllerContext": "Data Source=IssueControllerContext-df58f905-8d3a-4933-8c5c-810ecdfa280a.db",
+    "IssueTrackerContext": "Data Source=IssueTrackerContext-4113f368-ebae-4254-995a-4b87a5e43536.db"
+  }
 }
